fix for flickering issue

--- a/src/components/OrderBook/styles.module.scss
+++ b/src/components/OrderBook/styles.module.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
-    align-items: center;
     min-height: 31.25em;
     border-color: #263946;
 
